[package]
name = "amusing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
itertools = "0.14.0"
log = "0.4.27"
ratatui = { version = "0.29.0", features = ["serde"] }
rayon = "1.11.0"
serde_json = "1.0.143"
simple-logging = "2.0.2"
toml = "0.9.5"
tui-input = "0.14.0"
unidecode = "0.3.0"
