[package]
name = "amusing"
version = "1.0.0"
edition = "2024"
description = "A Musing client"
authors = ["Antoni Zasada (alfazet)"]
keywords = ["music", "musing", "client", "tui"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alfazet/amusing"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
image = "0.25.8"
itertools = "0.14.0"
log = "0.4.27"
ratatui = { version = "0.29.0", features = ["serde"] }
ratatui-image = "8.0.1"
rayon = "1.11.0"
serde_json = "1.0.143"
simple-logging = "2.0.2"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
toml = "0.9.5"
tui-input = "0.14.0"
unidecode = "0.3.0"

[profile.release]
lto = true
panic = "abort"
strip = true
